#255: fixed spacing issue

--- a/src/webui/designsystem/elements/column/Column.css
+++ b/src/webui/designsystem/elements/column/Column.css
@@ -9,6 +9,7 @@
         display: flex;
         flex-direction: column;
         min-width: 0;
+        width: 100%;
 
         & > div,
         & > h1,
