--- a/src/webui/layouts/sidebar/Sidebar.css
+++ b/src/webui/layouts/sidebar/Sidebar.css
@@ -29,6 +29,7 @@
     {
         display: flex;
         flex-direction: row;
+        gap: 2em;
         width: 100vw;
         height: 100vh;
         max-height: 100vh;
@@ -42,7 +43,6 @@
 
             aside
             {
-                display: flex;
                 flex-shrink: 0;
                 flex-grow: 0;
                 padding: 1em 0;
